Fixed mobilewrap error

--- a/style/style.css
+++ b/style/style.css
@@ -71,7 +71,7 @@ hr {
   display:none;
 }
 
-#mobilenavbar {
+#mobilenavbarwrap {
   display: none;
 }
 
@@ -626,6 +626,10 @@ footer p  {
 /* NAVIGATION */
 #navbar {
   display:none;
+}
+
+#mobilenavbarwrap {
+  display: block;
 }
 /* burger menu starts */
 
